fix: wrong environment variable name for truststore